@@ -3,6 +3,14 @@ Date	Added
 AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO INTO TRUNK.
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
+2008/01/09
+	* Script command warpportal now places a warp in its initial state (as if a
+	  real warp portal was casted).
+	* Updated dispell to also not remove the following effects: Hindsight, Inc
+	  Hit/Atk Rate (NPC_POWERUP), Nen, TK stances and tumble, warm and speedup1
+	  (the other speed potion).
+	* Chase-walking characters can now loot.
+	* Hiding characters can't drop items now. [Skotlex] 
 2008/01/08
 	* Added missing session auth checks to charserver. [ultramage]
 	  Packets from non-authed clients will now be discarded.
